--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,8 @@
   "Главная страница": "Главная страница",
   "Перевод": "Перевод",
   "Язык" : "Русский",
-  "О сайте": "О сайте"
+  "О сайте": "О сайте",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непридвиденная ошибка": "Произошла непридвиденная ошибка",
+  "Обновить страницу": "Обновить страницу"
 }
