--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "О сайте": "About us",
   "Страница не найдена": "Page not found",
   "Произошла непридвиденная ошибка": "An unexpected error has occurred",
-  "Обновить страницу": "Refresh the page"
+  "Обновить страницу": "Refresh the page",
+  "Короткий язык" : "En"
 }
