--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "О сайте": "О сайте",
   "Страница не найдена": "Страница не найдена",
   "Произошла непридвиденная ошибка": "Произошла непридвиденная ошибка",
-  "Обновить страницу": "Обновить страницу"
+  "Обновить страницу": "Обновить страницу",
+  "Короткий язык": "Ru"
 }
