--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,8 @@
   "Страница не найдена": "Page not found",
   "Произошла непридвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Refresh the page",
-  "Короткий язык" : "En"
+  "Короткий язык" : "En",
+  "Войти": "LoginIn",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password"
 }
