--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,8 @@
   "Страница не найдена": "Страница не найдена",
   "Произошла непридвиденная ошибка": "Произошла непридвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "Войти": "Войти",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
